--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About</title>
+    <link rel="icon" type="image/x-icon" href="img/person/croped/MyFavicon.ico">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
@@ -13,25 +14,28 @@
 </head>
 <body data-spy="scroll" data-target=".navbar">
    <!--Navigation-->
-<nav class="navbar navbar-expand-md navbar navbar-dark bg-dark sticky-top" >
+<nav class="navbar navbar-expand-md navbar sticky-top" style="background-color: #2E2E2E;">
     <div class="container">
-      <h5>Portfolio</h5> 
+        <a href="#About">
+            <img src="img/person/croped/pic.png" alt="" style="height: 100px; width: 110px;">
+        </a>
+      <!-- <h5>Ean Bosman</h5>  -->
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarResponsive">
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item ">
-                    <a class="nav-link" href="#About">About </a>
+                    <a style="color: white;" class="nav-link" href="#About">About </a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#Skills">Skills</a>
+                    <a style="color: white;" class="nav-link" href="#Skills">Skills</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#Experience">Experience</a>
+                    <a style="color: white;" class="nav-link" href="#Experience">Experience</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#footer">Contact</a>
+                    <a style="color: white;" class="nav-link" href="#footer">Contact</a>
                 </li>
             </ul>
         </div>
@@ -52,7 +56,7 @@
                     <div class="card bg-white">
                         <div class="card-title my-5">
                             <div class="media">
-                                <img src="img/person/croped/BeautyPlus_20210204095507924_save.jpg" width="250" height="250" class="img-fluid rounded-top mx-5 d-none d-lg-block" >
+                                <img src="img/person/croped/MYPIC.png" width="250" height="250" class="img-fluid rounded-top mx-5 d-none d-lg-block" >
                                 <div class="media-body">
                                     <h3 class="display-4 ml-5">Ean Macdonald Bosman</h3>
                                     <p class="text-muted ml-5">Software Developer</p>
@@ -61,7 +65,7 @@
                                             <tr>
                                                 <td class="text-muted">Age</td>
                                                 <td>:</td>
-                                                <td>27 Years old</td>
+                                                <td>28 Years old</td>
                                             </tr>
                                             <tr>
                                                 <td class="text-muted">Email</td>
@@ -76,7 +80,7 @@
                                             <tr>
                                                 <td class="text-muted">Phone</td>
                                                 <td>:</td>
-                                                <td>071 903 7911</td>
+                                                <td>084 689 4199 / 071 903 7911</td>
                                             </tr>
                                         </table>
 
@@ -115,40 +119,40 @@
 </div>
 
 <!-- Skill -->
-<div id="Skills" class=" mt-5">
-<div class="container">
-    <span class="bg-primary text-white">My Skills</span><hr class="bg-primary">
-    <div class="row">
+<div id="Skills" class=" mt-5" >
+<div class="container" style="margin-bottom: 25px;">
+    <span class="bg-primary text-white">Some Of My Skills</span><hr class="bg-primary">
+    <div class="row" style="margin-bottom: 25px;">
         <div class="col">
             <div class="card bg-white">
                 <!-- HTML -->
-                <h3 class="ml-3 my-3">HTML Language</h3>
+                <h3 class="ml-3 my-3">Web Development</h3>
                 <div class="progress mx-3">
                     <div class=" progress-bar bg-dark" style="width: 95%;">
                         95%
                     </div>
                 </div>
                 <!-- CSS -->
-                <h3 class="ml-3 my-3">CSS</h3>
+                <!-- <h3 class="ml-3 my-3">CSS</h3>
                 <div class="progress mx-3">
                     <div class=" progress-bar bg-dark" style="width: 98%;">
                         98%
                     </div>
-                </div>
+                </div> -->
                 <!-- JavaScript -->
-                <h3 class="ml-3 my-3">JavaScript</h3>
+                <!-- <h3 class="ml-3 my-3">JavaScript</h3>
                 <div class="progress mx-3">
                     <div class=" progress-bar bg-dark" style="width: 75%;">
                         75%
                     </div>
-                </div>
+                </div> -->
                 <!-- PHP -->
-                <h3 class="ml-3 my-3">PHP</h3>
+                <!-- <h3 class="ml-3 my-3">PHP</h3>
                 <div class="progress mx-3">
                     <div class=" progress-bar bg-dark" style="width: 90%;">
                         90%
                     </div>
-                </div>
+                </div> -->
                 <!-- Java -->
                 <h3 class="ml-3 my-3">Java</h3>
                 <div class="progress mx-3">
@@ -164,19 +168,19 @@
                     </div>
                 </div>
                 <!-- JQuery -->
-                <h3 class="ml-3 my-3">JQuery</h3>
+                <!-- <h3 class="ml-3 my-3">JQuery</h3>
                 <div class="progress mx-3">
                     <div class=" progress-bar bg-dark" style="width: 75%;">
                         75%
                     </div>
-                </div>
+                </div> -->
                 <!-- Database programming -->
-                <h3 class="ml-3 my-3">Database programming</h3>
+                <!-- <h3 class="ml-3 my-3">Database programming</h3>
                 <div class="progress mx-3">
                     <div class=" progress-bar bg-dark" style="width: 90%;">
                         90%
                     </div>
-                </div>
+                </div> -->
                 <!-- MySql database -->
                 <h3 class="ml-3 my-3">MySql database</h3>
                 <div class="progress mx-3">
@@ -186,20 +190,20 @@
                 </div>
 
                 <!-- PhpMyAdmin -->
-                <h3 class="ml-3 my-3">PhpMyAdmin</h3>
+                <!-- <h3 class="ml-3 my-3">PhpMyAdmin</h3>
                 <div class="progress mx-3">
                     <div class=" progress-bar bg-dark" style="width: 95%;">
                         95%
                     </div>
-                </div>
+                </div> -->
 
                 <!-- Bootstrap -->
-                <h3 class="ml-3 my-3">Bootstrap</h3>
+                <!-- <h3 class="ml-3 my-3">Bootstrap</h3>
                 <div class="progress mx-3">
                     <div class=" progress-bar bg-dark" style="width:78%;">
                         78%
                     </div>
-                </div>
+                </div> -->
 
                 <!-- Angular framework -->
                 <h3 class="ml-3 my-3">Angular framework</h3>
@@ -211,11 +215,12 @@
 
                 <!-- Ionic framework -->
                 <h3 class="ml-3 my-3">Ionic framework</h3>
-                <div class="progress mx-3">
+                <div class="progress mx-3" >
                     <div class=" progress-bar bg-dark" style="width: 80%;">
                         80%
                     </div>
                 </div>
+                <br><br>
             </div>
         </div>
     </div>
@@ -238,26 +243,39 @@
 
             <div class="col-lg-6">
                 <div class="card bg-white" style="border-top: 03px solid green">
-                    <img src="img/work/mlab-green-2.png" style="width: 200px; height: 80px;" class="img-fluid py-3 m-auto">
+                    <img src="img/work/mlab-green-2.png" style="width: 200px; height: 75px;" class="img-fluid py-3 m-auto">
+                    <br>
                     <h3 class="text-center text-success">Software Developer</h3>
                     <p class="lead text-justify p-3">Company Name: Mlab Northern Cape <br> Position: Software development <br>Duration: 03/2020 - 02/2021 <br>Reason for leaving: Contract ended</p>
                 </div>
             </div>
 
-            <div class="col-lg-6">
-                <div class="card bg-white" style="border-top: 03px solid #d63031">
-                    <img src="img/work/relianz.png" style="width: 200px; height: 80px;" class="img-fluid py-3 m-auto">
-                    <h3 class="text-center text-danger">General worker</h3>
-                    <p class="lead text-justify p-3">Company Name: Relianz Foods <br> Position: General worker <br>Duration: 2014-2015 <br>Reason for leaving: Study opportunity</p>
+            <div class="col-lg-6" style="margin-top: 20px;">
+                <div class="card bg-white" style="border-top: 03px solid rgb(7, 7, 95);">
+                    <img src="img/person/croped/ATTI.png" style="width: 200px; height: 80px;" class="img-fluid py-3 m-auto">
+                    <h3 class="text-center" style="color: rgb(7, 7, 95);">Software Developer</h3>
+                    <p class="lead text-justify p-3">Company Name: ATTI Computer Education & Training <br> Position: Software Developer <br>Duration: 02/2021 - 11/2021 <br>Reason for leaving: Internship Ended</p>
                 </div>
             </div>
+
+            <div class="col-lg-6" style="margin-top: 20px;">
+                <div class="card bg-white" style="border-top: 03px solid lightblue">
+                    <img src="img/person/croped/Logo 1.jpg" style="width: 200px; height: 80px;" class="img-fluid py-3 m-auto">
+                    <h3 class="text-center " style="color: lightblue;">Software Developer</h3>
+                    <p class="lead text-justify p-3">Company Name: Ayamah Tibaa <br> Position: Software Developer<br>Duration: 01/2022 - Present <br>Contract end date: 09/2023</p>
+                </div>
+            </div>
+            <br><br>
+            
         </div>
     </div>
 </div>
 
 
+
+
 <!-- Footer -->
-<footer class="page-footer font-small indigo" style="background-color: indigo" id="footer">
+<footer class="page-footer font-small indigo" style="background-color: grey" id="footer">
 
     <!-- Footer Links -->
     <div class="container">
@@ -268,7 +286,7 @@
         <!-- Grid column -->
         <div class="col-md-2 mb-3">
           <h6 class="text-uppercase font-weight-bold">
-            <a href="#About">About</a>
+            <a style="color: white;" href="#About">About</a>
           </h6>
         </div>
         <!-- Grid column -->
@@ -276,7 +294,7 @@
         <!-- Grid column -->
         <div class="col-md-2 mb-3">
           <h6 class="text-uppercase font-weight-bold">
-            <a href="#Skills">Skills</a>
+            <a style="color: white;" href="#Skills">Skills</a>
           </h6>
         </div>
         <!-- Grid column -->
@@ -284,7 +302,7 @@
         <!-- Grid column -->
         <div class="col-md-2 mb-3">
           <h6 class="text-uppercase font-weight-bold">
-            <a href="#Experience">Experience</a>
+            <a style="color: white;" href="#Experience">Experience</a>
           </h6>
         </div>
         <!-- Grid column -->
@@ -294,7 +312,7 @@
         <!-- Grid column -->
         <div class="col-md-2 mb-3">
           <h6 class="text-uppercase font-weight-bold">
-            <a href="#footer">Contact</a>
+            <a style="color: white;" href="#footer">Contact</a>
           </h6>
         </div>
         <!-- Grid column -->
@@ -310,7 +328,7 @@
         <div class="col-md-8 col-12 mt-5">
             <h5 class="font-weight-bold text-uppercase ">Contact</h5><br>
           <p style="line-height: 1.7rem; color: white;" >
-            Cell: 071 903 7911
+            Cell: 071 903 7911 / 084 689 4199
         </p>
         <p style="line-height: 1.7rem; color: white;">
             Email: macdonaldbosman@gmail.com
@@ -320,7 +338,7 @@
   
       </div>
       <!-- Grid row-->
-      <hr class="clearfix d-md-none rgba-white-light" style="margin: 10% 15% 5%;">
+      <hr class="clearfix d-md-none rgba-white-light" style="margin: 10% 15% 5%; color: white;">
   
       <!-- Grid row-->
       <div class="row pb-3">
@@ -331,7 +349,7 @@
           <div class="mb-5 flex-center" style="margin-left:495px ;">
   
             <!-- Facebook -->
-            <a style="margin-left: 10px;" class="fb-ic" href="https://www.facebook.com/macdonald.bosman.1">
+            <a style="color: white;" style="margin-left: 10px;" class="fb-ic" href="https://www.facebook.com/macdonald.bosman.1">
               <i class="fab fa-facebook-f fa-lg white-text mr-4"> </i>
             </a>
             <!-- Twitter 
@@ -340,11 +358,11 @@
             </a>-->
           
             <!-- Google +-->
-            <a class="gplus-ic" href="https://github.com/Ean1231">
+            <a style="color: white;" class="gplus-ic" href="https://github.com/Ean1231">
               <i class="fab fa-github fa-lg white-text mr-4"> </i>
             </a>
             <!--Linkedin -->
-            <a class="li-ic"  href="https://www.linkedin.com/in/ean-macdonald-bosman-328a801a3">
+            <a style="color: white;" class="li-ic"  href="https://www.linkedin.com/in/ean-macdonald-bosman-328a801a3">
               <i class="fab fa-linkedin-in fa-lg white-text mr-4"> </i>
             </a>
             <!--Instagram <a class="ins-ic">
@@ -416,7 +434,7 @@
     <div class="row">
         <div class="col">
             <div class="container">
-                <p class="text-white pt-3 text-center">© 2021 Copyright: Website Designed by: Ean Macdonald Bosman</p>
+                <p class="text-white pt-3 text-center">© 2022 Ean Macdonald Bosman</p>
 
             </div>
         </div>
