--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
     <script src="https://use.fontawesome.com/releases/v5.0.8/js/all.js"></script>
+    <script src="script.js"></script>
     <link rel="stylesheet" href="style.css">
 </head>
 <body data-spy="scroll" data-target=".navbar">
@@ -17,7 +18,7 @@
 <nav class="navbar navbar-expand-md navbar sticky-top" style="background-color: #2E2E2E;">
     <div class="container">
         <a href="#About">
-            <img src="img/person/croped/pic.png" alt="" style="height: 100px; width: 110px;">
+            <img src="img/person/croped/new LOGOO Ean.png" alt="" style="height: 60px; width: 80px;">
         </a>
       <!-- <h5>Ean Bosman</h5>  -->
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive">
@@ -47,6 +48,7 @@
 
 
 <!-- About Me -->
+
 
 <div id="About" style="margin-top: -200px;">
     <div class="container">
@@ -82,6 +84,17 @@
                                                 <td>:</td>
                                                 <td>084 689 4199 / 071 903 7911</td>
                                             </tr>
+                                            <tr>
+                                                <td class="text-muted">My cv</td>
+                                                <td>:</td>
+                                                <td>
+                                                    <a class="button" style="color: black; border: 1px solid grey; transition-duration: 0.4s;" href="cv/Ean-Bosman-cv.pdf" download="Ean Bosman CV"
+                                                    class="button is-outlined is-white">
+                                                    Download CV
+                                                    <span class="icon" style="margin-left: 5px"><i class="fas fa-download"></i></span>
+                                                    </a>
+                                                </td>
+                                            </tr>
                                         </table>
 
                                     </div>
@@ -107,10 +120,7 @@
         <div class="row">
             <div class="col">
                 <span class="bg-danger text-white">About Me</span><hr class="bg-danger">
-                <p class="lead text-justify">I`m a qualified systems developer(Diploma), I used to study at Boston city campus and business college. I am also an qualified computer technician, i completed my CompTIA A+ certification an Northern Cape urban TVET college on the year 2017,I enjoy being challenged and engaging with projects that require me to work outside my comfort and knowledge set, as continuing to learn new languages and development techniques are important to me and the success of your organization.I consider myself a hardworking, confident and optimistic person.
-                    I have excellent leadership skills and a sense for problem solving.
-                    I see myself as a highly motivated and ambitious person who strives on communication on all levels.
-                    Highly reliable person, applied spirit of the law.
+                <p class="lead text-justify">I am a Software Developer based in Kimberley in the northern cape. i create custom websites, mobile applications and computer software to improve business growth and help them do better business online.
                     </p>
             </div>
         </div>
@@ -232,21 +242,24 @@
     <div class="container mt-5 mb-5">
         <span class="bg-success text-white">Experience</span><hr class="bg-success">
         <div class="row">
-            <div class="col-lg-6">
-                <div class="card bg-white" style="border-top: 03px solid blue">
+            
+            <div class="col-lg-6" >
+                <div class="card bg-white" style="border-top: 03px solid #02679a;" >
                     <img src="img/work/DIGI TRANS.fw copy.png" style="width: 200px; height: 100px;" class="img-fluid py-3 m-auto">
-                    <h3 class="text-center" style="color: blue;">Software Developer</h3>
+                    <h3 class="text-center" style="color: #02679a;">Software Developer</h3>
                     <p class="lead text-justify p-3">Company Name: Digiticket SA<br> Position: Software Developer <br>Duration: 03/2021 - 09/2021 <br>Reason for leaving: Contract ended</p>
+                    <!-- <button onclick="digiticket()"  style=" border: 1px solid #02679a;" id="digiticket">View more</button> -->
                 </div>
             </div>
 <br>
 
             <div class="col-lg-6">
-                <div class="card bg-white" style="border-top: 03px solid green">
+                <div class="card bg-white" style="border-top: 03px solid limegreen">
                     <img src="img/work/mlab-green-2.png" style="width: 200px; height: 75px;" class="img-fluid py-3 m-auto">
                     <br>
-                    <h3 class="text-center text-success">Software Developer</h3>
+                    <h3 class="text-center " style="color: limegreen;">Software Developer</h3>
                     <p class="lead text-justify p-3">Company Name: Mlab Northern Cape <br> Position: Software development <br>Duration: 03/2020 - 02/2021 <br>Reason for leaving: Contract ended</p>
+                    <!-- <button id="mlab" href="" style=" border: 1px solid limegreen;">View more</button> -->
                 </div>
             </div>
 
@@ -255,6 +268,7 @@
                     <img src="img/person/croped/ATTI.png" style="width: 200px; height: 80px;" class="img-fluid py-3 m-auto">
                     <h3 class="text-center" style="color: rgb(7, 7, 95);">Software Developer</h3>
                     <p class="lead text-justify p-3">Company Name: ATTI Computer Education & Training <br> Position: Software Developer <br>Duration: 02/2021 - 11/2021 <br>Reason for leaving: Internship Ended</p>
+                    <!-- <button id="atti" href="" style=" border: 1px solid rgb(7, 7, 95);">View more</button> -->
                 </div>
             </div>
 
@@ -263,6 +277,7 @@
                     <img src="img/person/croped/Logo 1.jpg" style="width: 200px; height: 80px;" class="img-fluid py-3 m-auto">
                     <h3 class="text-center " style="color: lightblue;">Software Developer</h3>
                     <p class="lead text-justify p-3">Company Name: Ayamah Tibaa <br> Position: Software Developer<br>Duration: 01/2022 - Present <br>Contract end date: 09/2023</p>
+                    <!-- <button id="ayamah" href="" style=" border: 1px solid lightblue;">View more</button> -->
                 </div>
             </div>
             <br><br>
