--- a/mlab.html
+++ b/mlab.html
@@ -36,14 +36,14 @@
 </nav>
 
 <div class="header">
-  <strong style="color: #069904;"> Digi</strong><span style="color: #02679a;"><strong>Ticket</strong> </span>
+  <strong style="color: limegreen;">mLab</strong> </span>
 </div>
 
 <div class="row">
   <div class="leftcolumn">
     <div class="card " style="display: flex;">
   
-      <h3>Digiticket is a small start-up which focuses on developing mobile applications using frameworks such as Ionic and Flutter with Angular and Dart.I was involved in developing an (Platform) app called DigiTicket where users buy can event tickets, book accommodation, book traveling tickets and buy food</h3>
+      <h3>mLab is a tech-centred business working alongside partners to build a vibrant, robust innovation ecosystem.mLab places great importance on driving social and economic impact within the ICT sector. The organisation has a strong focus on empowering youth and driving inclusive innovation within the digital economy. It does this by providing support to its programme participants in order to de-risk them for relevant industry opportunities. These programmes include; Skills Development, Enterprise Development and Technology Development.</h3>
     </div>
     <div class="card">
       <h2>Some Projects I`ve Done</h2>
@@ -54,7 +54,7 @@
       </p>
     </div>
   </div>
-  <div class="rightcolumn">
+  <!-- <div class="rightcolumn">
  
     <div class="card">
       <h3>Access the DigiTicket App</h3>
@@ -87,7 +87,7 @@
       <h3>Contact person:</h3>
       <p>Tshepang Peme: 078 104 9263</p>
     </div>
-  </div>
+  </div> -->
 </div>
 
 </body>
