--- a/index.html
+++ b/index.html
@@ -289,7 +289,7 @@
                     <img src="img/work/DIGI TRANS.fw copy.png" style="width: 200px; height: 100px;" class="img-fluid py-3 m-auto">
                     <h3 class="text-center" style="color: #02679a;">Software Developer</h3>
                     <p class="lead text-justify p-3">Company Name: Digiticket SA<br> Position: Software Developer <br>Duration: 03/2021 - 09/2021 <br>Reason for leaving: Contract ended</p>
-                    <button onclick="digiticket()"  style=" border: 1px solid #02679a;" id="digiticket">View more</button>
+                    <!-- <button onclick="digiticket()"  style=" border: 1px solid #02679a;" id="digiticket">View more</button> -->
                 </div>
             </div>
 <br>
@@ -300,7 +300,7 @@
                     <br>
                     <h3 class="text-center " style="color: limegreen;">Software Developer</h3>
                     <p class="lead text-justify p-3">Company Name: Mlab Northern Cape <br> Position: Software development <br>Duration: 03/2020 - 02/2021 <br>Reason for leaving: Contract ended</p>
-                    <button onclick="mlab()" id="mlab" href="" style=" border: 1px solid limegreen;">View more</button>
+                    <!-- <button onclick="mlab()" id="mlab" href="" style=" border: 1px solid limegreen;">View more</button> -->
                 </div>
             </div>
 
