--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 </head>
 <body data-spy="scroll" data-target=".navbar">
    <!--Navigation-->
-<nav class="navbar navbar-expand-md navbar sticky-top" style="background-color: #2E2E2E;">
+<nav class="navbar navbar-expand-md navbar sticky-top" style="background-color: #2E2E2E; ">
     <div class="container">
         <a href="#About">
             <img src="img/person/croped/new LOGOO Ean.png" alt="" style="height: 60px; width: 80px;">
@@ -27,8 +27,8 @@
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarResponsive">
-            <ul class="navbar-nav ml-auto">
-                <li class="nav-item ">
+            <ul class="navbar-nav ml-auto" style=" gap: 50px;">
+                <li class="nav-item">
                     <a style="color: white;" class="nav-link" href="#About">About </a>
                 </li>
                 <li class="nav-item">
