--- a/index.html
+++ b/index.html
@@ -50,10 +50,10 @@
 <section  id="bg-img">
 
      <div class="leaf">
-     <div><img src="img/css3.png" height="75px" width="75px" style=" margin-left: -340px;"></img></div>
-      <div><img src="img/html5.png" height="75px" width="75px"></img></div>
+     <div><img src="img/css3.png" height="55px" width="45px" style=" margin-left: -340px;"></img></div>
+      <div><img src="img/html5.png" height="55px" width="55px"></img></div>
       <div><img src="img/2560px-Ionic_Logo.svg.png" height="40px" width="100px" ></img></div>
-      <div><img  src="img/5847ea22cef1014c0b5e4833.png" height="75px" width="75px"></img></div>
+      <div><img  src="img/5847ea22cef1014c0b5e4833.png" height="55px" width="55px"></img></div>
      <div><img src="img/Csharp_Logo.png" height="75px" width="75px"></img></div>
      <div><img src="img/Git-Icon-1788C.png" height="75px" width="75px"></div>
      <div><img src="img/typescript.png" height="75px" width="75px"></div>
@@ -78,7 +78,7 @@
     
      <div class="leaf leaf2">
         <div><img src="img/hubgtt.png" height="75px" width="75px"  style="margin-left: 220px;"></div>
-        <div>   <img src="img/JavaScript-logo.png" height="75px" width="75px"></div>
+        <div>   <img src="img/JavaScript-logo.png" height="55px" width="55px" style="margin-left: 150px;"></div>
         <div><img src="img/poowerr-removebg-preview.png" height="40px" width="150px" style="margin-left: 550px;" ></img></div>
         <!-- 
         <div>  <img src="img/hubgtt.png" height="75px" width="75px" ></img></div>
