--- a/index.html
+++ b/index.html
@@ -305,7 +305,7 @@
                     <img src="img/work/mlab-green-2.png" style="width: 200px; height: 75px;" class="img-fluid py-3 m-auto">
                     <br>
                     <h3 class="text-center " style="color: limegreen;">Software Developer</h3>
-                    <p class="lead text-justify p-3">Company Name: Mlab Northern Cape <br> Position: Software development <br>Duration: 03/2020 - 02/2021 <br>Reason for leaving: Contract ended <br>Contact person: abelo Gaotlhaelwe - 079 339 5980 </p>
+                    <p class="lead text-justify p-3">Company Name: Mlab Northern Cape <br> Position: Software development <br>Duration: 03/2020 - 02/2021 <br>Reason for leaving: Contract ended <br>Contact person: kabelo Gaotlhaelwe - 079 339 5980 </p>
                     <!-- <button onclick="mlab()" id="mlab" href="" style=" border: 1px solid limegreen;">View more</button> -->
                 </div>
             </div>
