--- a/index.html
+++ b/index.html
@@ -292,38 +292,38 @@
             
             <div class="col-lg-6" >
                 <div class="card bg-white" style="border-top: 03px solid #02679a;" >
-                    <img src="img/work/DIGI TRANS.fw copy.png" style="width: 200px; height: 100px;" class="img-fluid py-3 m-auto">
+                    <img src="img/work/DIGI TRANS.fw copy.png" style="width: 230px; height: 125px;" class="img-fluid py-3 m-auto">
                     <h3 class="text-center" style="color: #02679a;">Software Developer</h3>
-                    <p class="lead text-justify p-3">Company Name: Digiticket SA<br> Position: Software Developer <br>Duration: 03/2021 - 09/2021 <br>Reason for leaving: Contract ended <br>Contact person: Tshepang Peme - 078 104 9263</p>
+                    <p class="lead text-justify p-3">Company: Digiticket SA<br> Position: Software Developer <br>Duration: 03/2021 - 09/2021 <br>Reason for leaving: Contract ended <br>Contact person: Tshepang Peme - 078 104 9263</p>
                     <!-- <button onclick="digiticket()"  style=" border: 1px solid #02679a;" id="digiticket">View more</button> -->
                 </div>
             </div>
 <br>
 
             <div class="col-lg-6">
-                <div class="card bg-white" style="border-top: 03px solid limegreen">
-                    <img src="img/work/mlab-green-2.png" style="width: 200px; height: 75px;" class="img-fluid py-3 m-auto">
+                <div class="card bg-white" style="border-top: 03px solid #7fe817">
+                    <img src="img/work/mlab-green-2.png" style="width: 140px; height: 100px;" class="img-fluid py-3 m-auto">
                     <br>
-                    <h3 class="text-center " style="color: limegreen;">Software Developer</h3>
-                    <p class="lead text-justify p-3">Company Name: Mlab Northern Cape <br> Position: Software development <br>Duration: 03/2020 - 02/2021 <br>Reason for leaving: Contract ended <br>Contact person: kabelo Gaotlhaelwe - 079 339 5980 </p>
+                    <h3 class="text-center " style="color: #7fe817;">Software Developer Intern</h3>
+                    <p class="lead text-justify p-3">Company: Mlab Northern Cape <br> Position: Software Developer Intern <br>Duration: 03/2020 - 02/2021 <br>Reason for leaving: Contract ended <br>Contact person: kabelo Gaotlhaelwe - 079 339 5980 </p>
                     <!-- <button onclick="mlab()" id="mlab" href="" style=" border: 1px solid limegreen;">View more</button> -->
                 </div>
             </div>
 
             <div class="col-lg-6" style="margin-top: 20px;">
                 <div class="card bg-white" style="border-top: 03px solid rgb(7, 7, 95);">
-                    <img src="img/person/croped/ATTI.png" style="width: 200px; height: 80px;" class="img-fluid py-3 m-auto">
-                    <h3 class="text-center" style="color: rgb(7, 7, 95);">Software Developer</h3>
-                    <p class="lead text-justify p-3">Company Name: ATTI Computer Education & Training <br> Position: Software Developer <br>Duration: 02/2021 - 11/2021 <br>Reason for leaving: Internship Ended <br>Contact person:  Schalk Bruwer - 053 831 3367 </p>
+                    <img src="img/person/croped/ATTI.png" style="width: 180px; height:100px;" class="img-fluid py-3 m-auto">
+                    <h3 class="text-center" style="color: rgb(7, 7, 95);">Software Developer Intern</h3>
+                    <p class="lead text-justify p-3">Company: ATTI Computer Education & Training (<strong style="color: rgb(66, 107, 194);">MICT</strong> <strong style="color: grey;">SETA</strong>)<br> Position: Software Developer Intern<br>Duration: 02/2021 - 11/2021 <br>Reason for leaving: Internship Ended <br>Contact person:  Schalk Bruwer - 053 831 3367 </p>
                     <!-- <button id="atti" href="" style=" border: 1px solid rgb(7, 7, 95);">View more</button> -->
                 </div>
             </div>
 
             <div class="col-lg-6" style="margin-top: 20px;">
                 <div class="card bg-white" style="border-top: 03px solid lightblue">
-                    <img src="img/person/croped/Logo 1.jpg" style="width: 200px; height: 80px;" class="img-fluid py-3 m-auto">
+                    <img src="img/person/croped/Logo 1.jpg" style="width: 190px; height: 100px;" class="img-fluid py-3 m-auto">
                     <h3 class="text-center " style="color: lightblue;">Software Developer</h3>
-                    <p class="lead text-justify p-3">Company Name: Ayamah Tibaa <br> Position: Software Developer<br>Duration: 01/2022 - Present <br>Contract end date: 09/2023 <br>Contact person: Takalani Tshivhase - 0735154500</p>
+                    <p class="lead text-justify p-3">Company: Ayamah Tibaa <br> Position: Software Developer<br>Duration: 01/2022 - Present <br>Contract end date: 09/2023 <br>Contact person: Takalani Tshivhase - 0735154500</p>
                     <!-- <button id="ayamah" href="" style=" border: 1px solid lightblue;">View more</button> -->
                 </div> 
 
