--- a/index.html
+++ b/index.html
@@ -320,9 +320,9 @@
             </div>
 
             <div class="col-lg-6" style="margin-top: 20px;">
-                <div class="card bg-white" style="border-top: 03px solid lightblue">
+                <div class="card bg-white" style="border-top: 03px solid #4cc2c4">
                     <img src="img/person/croped/Logo 1.jpg" style="width: 190px; height: 100px;" class="img-fluid py-3 m-auto">
-                    <h3 class="text-center " style="color: lightblue;">Software Developer</h3>
+                    <h3 class="text-center " style="color: #4cc2c4;">Software Developer</h3>
                     <p class="lead text-justify p-3">Company: Ayamah Tibaa <br> Position: Software Developer<br>Duration: 01/2022 - Present <br>Contract end date: 09/2023 <br>Contact person: Takalani Tshivhase - 073 515 4500</p>
                     <!-- <button id="ayamah" href="" style=" border: 1px solid lightblue;">View more</button> -->
                 </div> 
