--- a/index.html
+++ b/index.html
@@ -311,10 +311,10 @@
             </div>
 
             <div class="col-lg-6" style="margin-top: 20px;">
-                <div class="card bg-white" style="border-top: 03px solid rgb(7, 7, 95);">
+                <div class="card bg-white" style="border-top: 03px solid #282a6b;">
                     <img src="img/person/croped/ATTI.png" style="width: 180px; height:100px;" class="img-fluid py-3 m-auto">
-                    <h3 class="text-center" style="color: rgb(7, 7, 95);">Software Developer Intern</h3>
-                    <p class="lead text-justify p-3">Company: ATTI Computer Education & Training (<strong style="color: rgb(66, 107, 194);">MICT</strong> <strong style="color: grey;">SETA</strong>)<br> Position: Software Developer Intern<br>Duration: 02/2021 - 11/2021 <br>Reason for leaving: Internship Ended <br>Contact person:  Schalk Bruwer - 053 831 3367 </p>
+                    <h3 class="text-center" style="color: #282a6b;">Software Developer Intern</h3>
+                    <p class="lead text-justify p-3">Company: ATTI Computer Education & Training (<strong style="color: #0a6188;">MICT</strong><strong style="color: grey;">SETA</strong>)<br> Position: Software Developer Intern<br>Duration: 02/2021 - 11/2021 <br>Reason for leaving: Internship Ended <br>Contact person:  Schalk Bruwer - 053 831 3367 </p>
                     <!-- <button id="atti" href="" style=" border: 1px solid rgb(7, 7, 95);">View more</button> -->
                 </div>
             </div>
