--- a/index.html
+++ b/index.html
@@ -336,7 +336,7 @@
 <!--Github Links to some Projects -->
 <div id="Experience">
     <div class="container mt-5 mb-5">
-        <span class="text-white" style="background-color: indigo;">Github links to some of my projects</span><hr style="background-color: indigo;">
+        <span class="text-white" style="background-color: indigo;">Projects i`ve worked on</span><hr style="background-color: indigo;">
         <div class="row" >
          
             <div class="col-lg-4" >
