--- a/index.html
+++ b/index.html
@@ -363,7 +363,7 @@
             <div class="col-lg-4">
                 <a href="https://github.com/Ean1231/covid-19-app" id="covid">
                     <div class="card " id="covid" style="border-top: 03px solid rgb(48, 45, 45);">
-                        <img src="img/Apps shots/Covid-19.png" style="width: 150px; height:335px;" class="img-fluid py-3 m-auto">
+                        <img src="img/Apps shots/covid new.png" style="width: 150px; height:335px;" class="img-fluid py-3 m-auto">
                       
                     </div>
                 </a>
