--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
                     <div class="card bg-white">
                         <div class="card-title my-5">
                             <div class="media">
-                                <img src="img/person/croped/MYPIC.png" width="250" height="250" class="img-fluid rounded-top mx-5 d-none d-lg-block" >
+                                <img src="img/person/croped/Bosman.jpg" width="250" height="50" class="img-fluid rounded-top mx-5 d-none d-lg-block" >
                                 <div class="media-body">
                                     <h3 class="display-4 ml-5">Ean Macdonald Bosman</h3>
                                     <p class="text-muted ml-5">Software Developer</p>
@@ -114,7 +114,7 @@
                                             <tr>
                                                 <td class="text-muted">Age</td>
                                                 <td>:</td>
-                                                <td>28 Years old</td>
+                                                <td>29 Years old</td>
                                             </tr>
                                             <tr>
                                                 <td class="text-muted">Email</td>
@@ -135,7 +135,7 @@
                                                 <td class="text-muted">My cv</td>
                                                 <td>:</td>
                                                 <td>
-                                                    <a class="button" style="color: black; border: 1px solid grey; transition-duration: 0.4s;" href="cv/Ean-Bosman-cv.pdf" download="Ean Bosman CV"
+                                                    <a class="button" style="color: black; border: 1px solid grey; transition-duration: 0.4s;" href="cv/Ean Macdonald Bosman CV.pdf" download="Ean Bosman CV"
                                                     class="button is-outlined is-white">
                                                     Download CV
                                                     <span class="icon" style="margin-left: 5px"><i class="fas fa-download"></i></span>
@@ -343,7 +343,6 @@
                 <a  href="https://github.com/Ean1231/Project-management-App" id="ECDPW" >
                     <div class="card " id="ECDPW" style="border-top: 03px solid #3cb371;" >
                         <img id="ecd" src="img/Apps shots/ECDPW3.png" style="width: 150px; height: 335px;" class="img-fluid py-3 m-auto">
-                       
                     </div>
                 </a>
                 
