--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
                                             <tr>
                                                 <td class="text-muted">Email</td>
                                                 <td>:</td>
-                                                <td>macdonaldbosman@gmail.com</td>
+                                                <td style="font-size: 15px;">macdonaldbosman@gmail.com</td>
                                             </tr>
                                             <tr>
                                                 <td class="text-muted">ID Number</td>
