--- a/index.html
+++ b/index.html
@@ -290,7 +290,7 @@
         <span class="bg-success text-white">Experience</span><hr class="bg-success">
         <div class="row">
             
-            <div class="col-lg-6" >
+            <div class="col-lg-6" style="margin-top: 20px;">
                 <div class="card bg-white" style="border-top: 03px solid #02679a;" >
                     <img src="img/work/DIGI TRANS.fw copy.png" style="width: 230px; height: 125px;" class="img-fluid py-3 m-auto">
                     <h3 class="text-center" style="color: #02679a;">Software Developer</h3>
@@ -300,7 +300,7 @@
             </div>
 <br>
 
-            <div class="col-lg-6">
+            <div class="col-lg-6" style="margin-top: 20px;">
                 <div class="card bg-white" style="border-top: 03px solid #7fe817">
                     <img src="img/work/mlab-green-2.png" style="width: 140px; height: 100px;" class="img-fluid py-3 m-auto">
                     <br>
