--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
         <div class="row">
             <div class="col">
                 <span class="bg-danger text-white">About Me</span><hr class="bg-danger">
-                <p class="lead text-justify">I am a Software Developer based in East london in the Eastern Cape. i create custom websites, mobile applications and computer software to improve business growth and help them do better business online.
+                <p class="lead text-justify">I am a Software Developer based in East London in the Eastern Cape. i create custom websites, mobile applications and computer software to improve business growth and help them do better business online.
                     </p>
             </div>
         </div>
